[package]
name = "base-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
 
[profile.release]
opt-level = 3

[dependencies]
common-library-rust = { git = "https://github.com/heaven-chp/common-library-rust.git", tag = "v0.0.1"  }
ctrlc = "3.4"
